--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^1.0.2",
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
