API route ve ortam ayarlarini guncelle

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,5 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 STRIPE_PRICE_ID=price_...      # Stripe Dashboard’da 50 TL/ay price oluştur
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+ADMIN_EMAIL=admin@geceylekonusmak.org
+
