--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "15.1.7",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+
     "stripe": "^19.1.0"
   },
   "devDependencies": {
