--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
     "next": "15.1.7",
+    "next-auth": "^4.24.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-
     "stripe": "^19.1.0"
   },
   "devDependencies": {
