--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
-    "next": "15.1.7",
+    "next": "^15.1.9",
     "next-auth": "^4.24.13",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "stripe": "^19.1.0"
   },
   "devDependencies": {
