admin moderation panel and comments/likes updates

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
     "cookie": "^1.0.2",
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
