--- a/.env.local
+++ b/.env.local
@@ -18,3 +18,5 @@ SUPABASE_SECRET_KEY=sb_secret_6SlGDiRBrKmMufXWadocew__GmY8jzX
 
 SUPABASE_URL=https://qwahoolljaxwacpwvpqi.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=sb_secret_6SlGDiRBrKmMufXWadocew__GmY8jzX
+
+NEXT_PUBLIC_BMC_URL=https://buymeacoffee.com/barisgurlee
