--- a/.env.local
+++ b/.env.local
@@ -20,3 +20,5 @@ SUPABASE_URL=https://qwahoolljaxwacpwvpqi.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=sb_secret_6SlGDiRBrKmMufXWadocew__GmY8jzX
 
 NEXT_PUBLIC_BMC_URL=https://buymeacoffee.com/barisgurlee
+
+NEXT_PUBLIC_AUTH_ENABLED=1
