--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
+    "@vercel/analytics": "^1.6.1",
     "cookie": "^1.0.2",
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
