foto albüm eklendi

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.24.13",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "stripe": "^19.1.0"
+    "stripe": "^19.1.0",
+    "yet-another-react-lightbox": "^3.28.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
