--- a/public/images/issues/album/01/manifest.json
+++ b/public/images/issues/album/01/manifest.json
@@ -26,7 +26,7 @@
     },
     {
       "file": "ilkgece-balkon.png",
-      "caption": "Islanmayı seçmek, duyguyu kontrol etmeyi bırakmaktır."
+      "caption": "Hayatı izlemek."
     },
     {
       "file": "ilkgece-eskiz.png",
