foto albüm eklendi

--- a/public/images/issues/album/01/manifest.json
+++ b/public/images/issues/album/01/manifest.json
@@ -34,7 +34,7 @@
     },
     {
       "file": "ilkgece-gunbatimi.png",
-      "caption": "Bazı yolculuklar ses çıkarmadan başlar."
+      "caption": "Zamanda anda kitlenir."
     },
     {
       "file": "ilkgece-kirikgitar.png",
